fix des images en version mobile

--- a/style.css
+++ b/style.css
@@ -1038,5 +1038,18 @@ h4 {
 }
 
 .citation {
-    font-size: 2em;
+    font-size: 1em;
+}
+.italic {
+    font-size: 1.5em;
+    font-style: italic;
+}
+
+img {
+  
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+     
+    
 }
